[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-missing"
version = "0.1.0"
description = "Scikit-learn extension for handling missing features in machine learning algorithms"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Ajay Joshi", email = "ajoshi@usc.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
examples = [
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/ajoshiusc/scikit-missing"
Repository = "https://github.com/ajoshiusc/scikit-missing"
Issues = "https://github.com/ajoshiusc/scikit-missing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scikit_missing*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
